# rust-aws-arn

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  known.rs  lib.rs  service-formats.toml  validate.rs
src/builder/: cognito.rs  iam.rs  lambda.rs  mod.rs  s3.rs
tests/: examples.txt  test_account_identifier.rs  test_arn.rs  test_arn_builder.rs  test_examples.rs  test_identifier.proptest-regressions  test_identifier.rs  test_resource_identifier.rs
