[package]
name = "aws-arn"
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Provides types, builders, and other helpers to manipulate AWS Amazon Resource Name (ARN) strings"
documentation = "https://docs.rs/aws-arn/"
repository = "https://github.com/johnstonskj/rust-aws-arn.git"
license = "MIT"
readme = "README.md"
publish = true


[features]
default = ["serde_support"]
ext_validation = ["serde_support", "toml"]
serde_support = ["serde"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.7"

# Optional dependencies
serde = { optional = true, version = "1.0.110", features = ["derive"] }
toml = { optional = true, version = "0.5.6" }
