[package]
name = "aws-arn"
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Provides types, builders, and other helpers to manipulate AWS Amazon Resource Name (ARN) strings"
documentation = "https://docs.rs/aws-arn/"
repository = "https://github.com/johnstonskj/rust-aws-arn.git"
license = "MIT"
readme = "README.md"
publish = true


[features]
default = ["builders", "known", "serde_support"]
builders = ["known", "lazy_static"]
known = []
serde_support = ["serde"]

[dependencies]

# Optional dependencies
lazy_static = { optional = true, version = "1.4.0" }
serde = { optional = true, version = "1.0.110", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
pretty_assertions = "0.7.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
